src/tests/snapshots/learn_chumsky__tests__functions__empty-2.snap
---
source: src/tests/functions.rs
expression: "&snapshot"
---
--- Input ---
func empty();
---

Some(
    Spanned(
        Func {
            name: Spanned(
                "empty",
                5..10,
            ),
            params: [],
            rhs: None,
        },
        0..13,
    ),
)

--- Errors ---
[]
---
