src/tests/snapshots/learn_chumsky__tests__functions__empty.snap
---
source: src/tests/functions.rs
expression: "&snapshot"
---
--- Input ---
func empty() {}
---

Some(
    Spanned(
        Func {
            name: Spanned(
                "empty",
                5..10,
            ),
            params: [],
            rhs: Some(
                Spanned(
                    Block(
                        [],
                    ),
                    13..15,
                ),
            ),
        },
        0..15,
    ),
)

--- Errors ---
[]
---
