src/tests/snapshots/learn_chumsky__tests__functions__params.snap
---
source: src/tests/functions.rs
expression: "&snapshot"
---
--- Input ---
func params(one, two, three);
---

Some(
    Spanned(
        Func {
            name: Spanned(
                "params",
                5..11,
            ),
            params: [
                Spanned(
                    "one",
                    12..15,
                ),
                Spanned(
                    "two",
                    17..20,
                ),
                Spanned(
                    "three",
                    22..27,
                ),
            ],
            rhs: None,
        },
        0..29,
    ),
)

--- Errors ---
[]
---
